# sensei-monorepo

./: .gitmodules
.github/actions/setup-rust-env/: action.yml
.github/workflows/: lint.yml  test.yml
sencore/: CLAUDE.md
sencore/docs/: interpreter-spec.md  s-expression-ast-format.md
sencore/examples/: abi-encode.sen  comptime-resolve.sen  runtime-mem.sen
sencore/src/: ast.rs  comptime_value.rs  errors.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  pretty.rs
sensei-tree-sitter/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar-desc.md  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
sensei-tree-sitter/bindings/c/: tree-sitter-sensei.pc.in
sensei-tree-sitter/bindings/c/tree_sitter/: tree-sitter-sensei.h
sensei-tree-sitter/bindings/go/: binding.go  binding_test.go
sensei-tree-sitter/bindings/node/: binding.cc  index.js
sensei-tree-sitter/bindings/python/tests/: test_binding.py
sensei-tree-sitter/bindings/python/tree_sitter_sensei/: __init__.py  binding.c
sensei-tree-sitter/bindings/rust/: build.rs  lib.rs
sensei-tree-sitter/bindings/swift/TreeSitterSenseiTests/: TreeSitterSenseiTests.swift
sensei-tree-sitter/src/: grammar.json  node-types.json  parser.c
sensei-tree-sitter/test/corpus/: simple.txt
senseic/: .gitignore  CLAUDE.md  Cargo.toml  PARSER_PRD.json  justfile  run-all-tests.sh
senseic/.claude/skills/data-structure/: SKILL.md
senseic/.claude/skills/parser-engineer/: SKILL.md
senseic/crates/cli/src/: main.rs
senseic/crates/data/src/: bigint.rs  lib.rs  span.rs
senseic/crates/parser/: Cargo.toml
senseic/crates/parser/src/: ast.rs  const_print.rs  cst.rs  diagnostics.rs  display.rs  lexer.rs  lib.rs  parser.rs  ts_parser.rs
senseic/crates/sensei-core/: Cargo.toml
senseic/crates/sensei-core/src/: bigint.rs  dense_index_set.rs  index.rs  index_vec.rs  intern.rs  lib.rs  list_of_lists.rs  span.rs
senseic/docs/: Frontend-Architecture.md  Grammar.md
senseic/examples/: basic-001.sen  basic-002.sen  erc20.sen  mini.sen  mini2.sen
senseic/examples/multifile/: lib.plank  main.plk  main_glob.plk
senseic/frontend/cli/: Cargo.toml
senseic/frontend/cli/src/: main.rs
senseic/frontend/diagnostics/: Cargo.toml
senseic/frontend/diagnostics/src/: lib.rs
senseic/frontend/hir/: Cargo.toml
senseic/frontend/hir-eval/: Cargo.toml
senseic/frontend/hir-eval/src/: comptime.rs  lib.rs  lower.rs  value.rs
senseic/frontend/hir/src/: display.rs  lib.rs  types.rs  values.rs
senseic/frontend/mir/: Cargo.toml
senseic/frontend/mir/src/: lib.rs
senseic/frontend/parser/: Cargo.toml
senseic/frontend/parser/src/: ast.rs  diagnostics.rs  error_report.rs  interner.rs  lexer.rs  lib.rs  module.rs  parser.rs  project.rs  source.rs
senseic/frontend/types/: Cargo.toml
senseic/frontend/types/src/: lib.rs
senseic/frontend/values/: Cargo.toml
senseic/frontend/values/src/: bignum_interner.rs  lib.rs  type_interner.rs
senseic/sir/: CLAUDE.md
senseic/sir/crates/analyses/: Cargo.toml
senseic/sir/crates/assembler/: Cargo.toml
senseic/sir/crates/cli/: Cargo.toml
senseic/sir/crates/data/: Cargo.toml
senseic/sir/crates/debug-backend/: Cargo.toml
senseic/sir/crates/optimizations/: Cargo.toml
senseic/sir/crates/parser/: Cargo.toml
senseic/sir/crates/parser/src/: emit.rs  lexer.rs  lib.rs  parser.rs
senseic/sir/crates/transforms/: Cargo.toml
senseic/sir/sir-solidity-diff-tests/src/: ConstProp.sol  const_prop.sir  defragment_dead_code.sir
senseic/sir/test-utils/: Cargo.toml
senseic/sir/test-utils/src/: lib.rs
(+48 files in other folders)
