[package]
name = "tree-sitter-sensei"
description = "A tree-sitter parser for sensei"
version = "0.1.0"
authors = ["Philogy <philogy@senseilang.org>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "sensei"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/senseilang/sensei-tree-sitter"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
