[package]
name = "sensei-hir-eval"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sensei-core.workspace = true
sensei-hir.workspace = true
sensei-mir.workspace = true
sensei-parser.workspace = true
sensei-values.workspace = true

hashbrown.workspace = true
alloy-primitives.workspace = true
