[package]
name = "sensei-hir"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sensei-core.workspace = true
sensei-parser.workspace = true
plank-diagnostics.workspace = true

hashbrown.workspace = true
allocator-api2.workspace = true
alloy-primitives.workspace = true
