[package]
name = "sir-test-utils"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
logos.workspace = true
chumsky.workspace = true
bumpalo.workspace = true
smallvec.workspace = true
sir-data.workspace = true
sir-analyses.workspace = true
alloy-primitives.workspace = true
pretty_assertions.workspace = true
