[package]
name = "sir-parser"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
logos.workspace = true
chumsky.workspace = true
thiserror.workspace = true
sir-data.workspace = true
sir-analyses.workspace = true
bumpalo.workspace = true
alloy-primitives.workspace = true
smallvec.workspace = true

[dev-dependencies]
sir-test-utils = { path = "../../test-utils" }
